force-app/main/default/objects/TCM_Report_Config__mdt/TCM_Report_Config__mdt.object-meta.xml
<CustomObject>
    <label>TCM Report Config</label>
    <pluralLabel>TCM Report Configs</pluralLabel>
</CustomObject>