force-app/main/default/objects/TCM_Report_Config__mdt/fields/Allow_Download__c.field-meta.xml
<CustomField>
    <fullName>Allow_Download__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Allow Download</label>
    <type>Checkbox</type>
</CustomField>