force-app/main/default/objects/TCM_Report_Config__mdt/fields/Business_Timezone__c.field-meta.xml
<CustomField>
    <fullName>Business_Timezone__c</fullName>
    <label>Business Timezone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>