force-app/main/default/objects/TCM_Report_Config__mdt/fields/Digest_Recipients__c.field-meta.xml
<CustomField>
    <fullName>Digest_Recipients__c</fullName>
    <inlineHelpText>One or more addresses, separated by ; or , - Text rather than Email so it can hold a list.</inlineHelpText>
    <label>Digest Recipients</label>
    <length>255</length>
    <type>Text</type>
</CustomField>