force-app/main/default/objects/TCM_Report_Config__mdt/fields/From_Org_Wide_Address__c.field-meta.xml
<CustomField>
    <fullName>From_Org_Wide_Address__c</fullName>
    <label>From Org Wide Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>