force-app/main/default/objects/TCM_Report_Config__mdt/fields/Global_CC_Emails__c.field-meta.xml
<CustomField>
    <fullName>Global_CC_Emails__c</fullName>
    <inlineHelpText>Cc&apos;d on every facility email. NOT the digest - see Digest Recipients. Separate with ; or , . A true Cc: no link of their own, not counted as extra sends. They can still open the report by sending the code to their own address. Ignored in a sandbox.</inlineHelpText>
    <label>Global CC Emails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>