force-app/main/default/objects/TCM_Report_Config__mdt/fields/Internal_CC_Emails__c.field-meta.xml
<CustomField>
    <fullName>Internal_CC_Emails__c</fullName>
    <inlineHelpText>Lumina staff who should receive the same readmissions report as the facility. Separate several with a semicolon or a comma. Each one gets their own email and their own link, so their one-time code goes to them and never to the facility. Supersedes Internal CC Email, which holds only one address.</inlineHelpText>
    <label>Internal CC Emails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>