force-app/main/default/objects/TCM_Report_Config__mdt/fields/Link_Expiry_Hours__c.field-meta.xml
<CustomField>
    <fullName>Link_Expiry_Hours__c</fullName>
    <label>Link Expiry Hours</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>