force-app/main/default/objects/TCM_Report_Config__mdt/fields/Max_Opens__c.field-meta.xml
<CustomField>
    <fullName>Max_Opens__c</fullName>
    <description>Opens allowed per recipient link before it is expired early. Zero or blank disables the cap. Enforced when the audit sync runs, so it is a soft cap: a burst of opens inside one sync window can exceed it slightly.</description>
    <inlineHelpText>Opens allowed per link before it is closed early. Blank or 0 means no cap.</inlineHelpText>
    <label>Max Opens</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>