force-app/main/default/objects/TCM_Report_Config__mdt/fields/NJ_GHC_CC_Email__c.field-meta.xml
<CustomField>
    <fullName>NJ_GHC_CC_Email__c</fullName>
    <label>NJ GHC CC Email</label>
    <type>Email</type>
</CustomField>