force-app/main/default/objects/TCM_Report_Config__mdt/fields/NJ_GHC_Parent_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>NJ_GHC_Parent_Company_Name__c</fullName>
    <label>NJ GHC Parent Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>