force-app/main/default/objects/TCM_Report_Config__mdt/fields/Notify_On_Visit__c.field-meta.xml
<CustomField>
    <fullName>Notify_On_Visit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notify On Visit</label>
    <type>Checkbox</type>
</CustomField>