force-app/main/default/objects/TCM_Report_Config__mdt/fields/Portal_Base_Url__c.field-meta.xml
<CustomField>
    <fullName>Portal_Base_Url__c</fullName>
    <inlineHelpText>Optional. Full URL of the report site page, for example https://example.my.salesforce-sites.com/report. Leave blank to derive it from the TCM_Readmission_Portal site in this org.</inlineHelpText>
    <label>Portal Base Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>