force-app/main/default/objects/TCM_Report_Config__mdt/fields/Require_Facility_TCM__c.field-meta.xml
<CustomField>
    <fullName>Require_Facility_TCM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Require Facility TCM</label>
    <type>Checkbox</type>
</CustomField>