force-app/main/default/objects/TCM_Report_Config__mdt/fields/Required_Patient_Class__c.field-meta.xml
<CustomField>
    <fullName>Required_Patient_Class__c</fullName>
    <inlineHelpText>Only report admissions whose Patient Class contains this word, for example Inpatient. Patient Class holds a comma separated list such as &quot;Emergency, Inpatient&quot;, so this is a contains match, not an exact one. Leave blank to report every class.</inlineHelpText>
    <label>Required Patient Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>