force-app/main/default/objects/TCM_Report_Config__mdt/fields/Sandbox_From_Org_Wide_Address__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_From_Org_Wide_Address__c</fullName>
    <label>Sandbox From Org Wide Address</label>
    <type>Email</type>
</CustomField>