force-app/main/default/objects/TCM_Report_Config__mdt/fields/Sandbox_Redirect_Email__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_Redirect_Email__c</fullName>
    <inlineHelpText>Single address. Superseded by Sandbox Redirect Emails, which accepts a list; used only when that is blank.</inlineHelpText>
    <label>Sandbox Redirect Email</label>
    <type>Email</type>
</CustomField>