force-app/main/default/objects/TCM_Report_Config__mdt/fields/Sandbox_Redirect_Emails__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_Redirect_Emails__c</fullName>
    <inlineHelpText>One or more addresses, separated by ; or , that receive every facility email and the digest when the batch runs in a sandbox. Nothing reaches a real facility while this is set. Takes precedence over Sandbox Redirect Email.</inlineHelpText>
    <label>Sandbox Redirect Emails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>