force-app/main/default/objects/TCM_Report_Config__mdt/fields/Subject_Template__c.field-meta.xml
<CustomField>
    <fullName>Subject_Template__c</fullName>
    <label>Subject Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>